<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="menutitle_task">Add Task</string>
    <string name="menumain_addDuration">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About TaskTimer</string>
    <string name="menumain_generate">Generate data</string>
    <string name="no_task_message">No Task Selected.</string>
    <string name="edit_button_description">Button to edit task details.</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_name">Task name: required</string>
    <string name="addedit_description">Task description (optional)</string>
    <string name="addedit_sortorder">Orders: sorts low to high</string>
    <string name="addedit_save">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">
Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list. Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed). \n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.
</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">
Deleting will also delete all timing data associated with task id %1$d: %2$s.
</string>
    <string name="cancelEditDiag_message">
You have unsaved changes. Do you want to abandon your changes, or continue editing?
</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Abandon changes</string>
    <string name="about_copyright">Copyright \u00a9 2017 LearnProgramming.academy</string>

    <string name="about_weblink">
Instructions available at
</string>
    <string name="about_url">http://www.learnprogramming.academy</string>
    <string name="about_weblink_21">
Instructions available at https://www.learnprogramming.academy
</string>
    <string name="about_email">
For support, email tasktimer@learnprogramming.academy
</string>
    <string name="about_credits">
Icon derived from
<b>analog clock</b>
at openclipart.org by
<b>Anonymous</b>
</string>
</resources>